--- a/ToDoList/Views/ToDoItem/Index.cshtml
+++ b/ToDoList/Views/ToDoItem/Index.cshtml
@@ -1,44 +1,37 @@
-﻿@model IEnumerable<ToDoList.Models.ToDoItem>
+﻿@using ToDoList;
+@model ToDoList.Models.ToDoItem;
 
-@{
 
-}
 
 <section style="display:flex; flex-direction:column; align-items:center; padding:10px;">
 
-    <div style="margin-bottom: 10px; display: flex;">
+    <div style="margin-bottom: 10px; display: flex; flex-direction: column;">
 
-        <div style="width: 300px; margin: 0 10px;">
-            <input class="form-control" placeholder="What's next on the list?" />
-        </div>
-        <div>
-            <button class="btn btn-success">Add</button>
-            <div />
-        </div>
 
-        <div>
-            @foreach (var item in Model)
-            {
-                <div>
-                    <div>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </div>
-                    <div>
-                        <button asp-action="MarkComplete" asp-route-id="@item.Id"
-                                class="btn btn-success">
-                            Complete
-                        </button>
-                    </div>
-                    <div>
-                        <button asp-action="Delete" asp-route-id="@item.Id"
-                                class="btn btn-success">
-                            Delete
-                        </button>
-                    </div>
+
+        <form asp-action="Create">
+            <div style="display: flex;">
+                <div style="width: 300px; margin: 0 10px;">
+                    <input asp-for="Name" class="form-control" placeholder="What's next on the list?" />
                 </div>
-            }
+                <div>
+                    <button type="submit" class="btn btn-success">Add</button>
+                </div>
+            </div>
+        </form>
+
+
+        @{
+            await Html.RenderPartialAsync("../ToDoItem/_ActiveItems.cshtml",
+                (IEnumerable<ToDoItem>)ViewBag.activeItems);
+
+            await Html.RenderPartialAsync("../ToDoItem/_CompletedItems.cshtml",
+          (IEnumerable<ToDoItem>)ViewBag.completedItems);
+
+        }
+
+
         </div>
-    </div>
 
 
 </section>
